# fastapi-template

./: README.md  docker-compose.yml  example.env  pyproject.toml
alembic/: env.py
docker/: Dockerfile
