[project]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = [{ name = "Olivier Banville", email = "olivier@banville.net" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "sqlmodel (>=0.0.31,<0.0.32)",
    "alembic (>=1.18.0,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic[email,timezone] (>=2.12.5,<3.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
